<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <android.support.v7.widget.RecyclerView
            android:id="@+id/tasks_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"></android.support.v7.widget.RecyclerView>

        <ProgressBar
            android:id="@+id/tasks_list_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminate="true" />

        <LinearLayout
            android:id="@+id/view_retry_tasks_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/error_text_view_tasks_list"
                style="@style/OpaqueRegular11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:id="@+id/empty_view_text_tasks_list"
                style="@style/ClearMedium18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp" />
        </LinearLayout>
    </RelativeLayout>
</layout>