...
    <string name="permission_granted">Permission granted</string>
    <string name="permission_not_granted">Permission not granted</string>
    <string name="permission_gallery_rationale">Without read permission this feature will not function</string>
    <string name="permission_camera_rationale">Without camera permission this feature will not function</string>
    <string name="decide">Decide</string>

    <string name="my_tasks">My Tasks</string>
    <string name="task_updated_successfully">Task updated successfully</string>
    <string name="task_not_updated">Task not updated</string>

    <string name="notifications">Notifications</string>

    <string name="my_account">My Account</string>
...
